<resources>
    <string name="dialog_general_button_close">Close</string>
    <string name="dialog_general_button_cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_converting_saved_games_title">Upgrading new version</string>
    <string name="dialog_converting_saved_games_message">For this new version of MathDoku, your saved games are now being converted (one time only).</string>
    <string name="dialog_converting_cleanup_v1_message">Clean up data of version 1 of MathDoku (one time only).</string>
    <string name="puzzle_help_dialog_leadin">Thanks for installing MathDoku Extended.</string>
    <string name="puzzle_help_dialog_help_section_title">Help</string>
    <string name="puzzle_help_dialog_goal_section_title">Your goal</string>
    <string name="puzzle_help_dialog_goal_section_body">Fill in each row and column with digits from 1 to grid size.\n\nDigits can and must be used only once per row and column.\n\nThick lines indicate \'cages\' - each cage has an arithmetic puzzle, which must be solved by the digits in the cage, e.g. \'5+\' means all digits in that cage add to 5. The order in which the digits are used in the cage is not relevant.\n\nDigits can be used more than once per cage, so long as there is only one of a digit per row or column.</string>
    <string name="puzzle_help_dialog_how_to_play__section_title">How to play</string>
    <string name="puzzle_help_dialog_how_to_play_section_body">1. Touch to select a cell in the grid.\n2. Touch a digit to put a solution or \'maybe\' in a cell\n\n   a) Long touch enabled (recommended) - long touch puts solution, short touch puts \'maybe\'\n\n   b) Long touch disabled - switch between normal and \'maybe\' mode by pressing a button or by double tapping a cell.\n\nPuzzles will be saved automatically.</string>
    <string name="puzzle_help_dialog_version_section_title">Version</string>
    <string name="puzzle_help_dialog_license_section_title">License</string>
    <string name="puzzle_help_dialog_project_home_section_title">Project Home</string>
    <string name="puzzle_help_dialog_contributors_section_title">Greetings</string>
    <string name="puzzle_help_dialog_contributors_section_body">MathDoku was initially developed by Ben Buxton and his team. It is kindly made open source for the rest of the world to \'hack\'.\nThx! </string>
    <string name="puzzle_help_dialog_neutral_button">Changes</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_version_title">Version</string>
    <string name="changelog_changes_title">Changes</string>
    <string name="changelog_changes_body">    ver 1.21\n\n - new options on menu to fill all possibles or get all from Digitalc\n - long touch on single digit in grid puts solution in a cell\n  - long touch on Digitcalc button immediately returns possible digits in a selected cage</string>
    <string name="changelog_issues_title">Bugs and features</string>
    <string name="changelog_issues_body">Feel free to report any issues or feature requests to</string>
    <string name="action_bar_subtitle_puzzle_fragment">Play a game</string>
    <string name="action_archive">Archive</string>
    <string name="action_cheats">Cheats&#8230;</string>
    <string name="action_clear_grid">Restart game</string>
    <string name="action_new_game">New Game</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_help">Help</string>
    <string name="action_picturenality">Know yourself</string>
    <string name="action_reveal_cell">Reveal cell</string>
    <string name="action_reveal_operator">Reveal operator</string>
    <string name="action_show_solution">Show solution</string>
    <string name="action_fill_possibles">All possibles</string>
    <string name="action_fill_digitcalc">All from DigitCalc</string>
    <string name="dialog_puzzle_parameters_title">Create new game</string>
    <string name="dialog_puzzle_parameters_puzzle_size">Puzzle size</string>
    <string name="dialog_puzzle_parameters_operators_in_cage_visible">Operators in cage visible</string>
    <string name="dialog_puzzle_parameters_difficulty">Difficulty</string>
    <string name="dialog_puzzle_parameters_neutral_button">Generate</string>
    <string name="dialog_building_puzzle_title">Building puzzle</string>
    <string name="dialog_building_puzzle_message">A new puzzle is being built. It will be ready in a few seconds.</string>
    <string name="general_settings_actionbar_title">General settings</string>
    <string name="puzzle_setting_group_assistance">Assistance</string>
    <string name="puzzle_setting_bad_cage_math_visible_title">Mark bad maths</string>
    <string name="puzzle_setting_bad_cage_math_visible_summary">Highlight cages with incorrect maths</string>
    <string name="puzzle_setting_duplicate_digits_visible_title">Mark duplicates</string>
    <string name="puzzle_setting_duplicate_digits_visible_summary">Highlight duplicate digits in a row or column</string>
    <string name="puzzle_setting_clear_maybes_title">Clear maybes</string>
    <string name="puzzle_setting_clear_maybes_summary">Clear maybes when used in another cell on the same row or column</string>
    <string name="puzzle_setting_group_display">Display</string>
    <string name="puzzle_setting_theme_title">Theme</string>
    <string name="puzzle_setting_digits_long_touch_title">Enable long touch</string>
    <string name="puzzle_setting_digits_long_touch_summary">Long touch on digit button puts a solution to cell</string>
    <string name="puzzle_setting_colored_digits_title">Colored digits</string>
    <string name="puzzle_setting_colored_digits_summary">Use colored digits to distinguish maybe numbers from normal numbers</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_title">Maybes in grid</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_summary">Display \'maybe\' numbers in a grid</string>
    <string name="puzzle_setting_timer_visible_title">Display timer</string>
    <string name="puzzle_setting_timer_visible_summary">Display a timer while solving a puzzle</string>
    <string name="puzzle_setting_full_screen_title">Full screen</string>
    <string name="puzzle_setting_full_screen_summary">Play in full screen mode by hiding Android\'s notification bar</string>
    <string name="puzzle_setting_wake_lock_title">Keep screen on</string>
    <string name="puzzle_setting_wake_lock_summary">Prevent the screen from going off while playing</string>
    <string name="puzzle_setting_group_sound">Sound</string>
    <string name="puzzle_setting_sound_effects_title">Sound effects</string>
    <string name="puzzle_setting_sound_effects_summary">Enable the sound effects</string>
    <string name="puzzle_setting_fill_digitcalc_title">Fill from DigitCalc</string>
    <string name="puzzle_setting_fill_digitcalc_summary">Fill all maybes in empty cells of a current cage according to the DigitCalc results. Be aware that this could spoil the game.</string>
    <string name="theme_extended">Extended</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="dialog_reveal_solution_confirmation_title">Reveal solution?</string>
    <string name="dialog_reveal_solution_confirmation_message">Are you sure you want to reveal the solution of this puzzle?</string>
    <string name="dialog_reveal_solution_confirmation_negative_button">No, I\'ll solve it myself</string>
    <string name="dialog_reveal_solution_confirmation_positive_button">Yes, I give up</string>
    <string name="dialog_clear_grid_confirmation_title">Clear entire grid?</string>
    <string name="dialog_clear_grid_confirmation_message">Are you sure you want to clear the entire grid?</string>
    <string name="dialog_clear_grid_confirmation_negative_button">No, leave it</string>
    <string name="dialog_clear_grid_confirmation_positive_button">Yes, start over</string>
    <string name="dialog_kkc_download_confirmation_title">Install DigitCalc?</string>
    <string name="dialog_kkc_download_confirmation_message">Ooops, it seems you have not installed DigitCalc yet.\nDo you want to install it from Google Play?</string>
    <string name="dialog_kkc_upgrade_confirmation_title">Upgrade DigitCalc?</string>
    <string name="dialog_kkc_upgrade_confirmation_message">Ooops, it seems you have old version of DigitCalc.\nDo you want to upgrade it from Google Play?</string>
    <string name="dialog_picturenality_download_confirmation_title">Klokisoft\'s Picturenality</string>
    <string name="dialog_picturenality_download_confirmation_message">Picturenality is our fun and simple personality test based on pictures.\n\nDo you want to try it and get to know something about yourself?\n</string>
    <string name="dialog_kkc_download_confirmation_negative_button">No, I\'ll do it later</string>
    <string name="dialog_kkc_download_confirmation_positive_button">Yes, let\'s do it</string>
    <string name="main_ui_clear">Clear</string>
    <string name="main_ui_undo">Undo</string>
    <string name="main_ui_kkc">DigitCalc</string>
    <string name="main_ui_button1">1</string>
    <string name="main_ui_button2">2</string>
    <string name="main_ui_button3">3</string>
    <string name="main_ui_button4">4</string>
    <string name="main_ui_button5">5</string>
    <string name="main_ui_button6">6</string>
    <string name="main_ui_button7">7</string>
    <string name="main_ui_button8">8</string>
    <string name="main_ui_button9">9</string>
    <string name="main_ui_buttonC">C</string>
    <string name="dialog_tip_do_not_show_again">Do not show again</string>
    <string name="dialog_tip_cheat_reveal_value_title">Cheat: reveal value</string>
    <string name="dialog_tip_cheat_reveal_value_text">You have revealed the value of a cell. Revealing the value of a cell is not needed to solve the puzzle as each puzzle has one unique solution which can be found without using cheats.\nEach time you will use this cheat, the elapsed time will be increased by %1$s.</string>
    <string name="dialog_tip_cheat_reveal_operator_title">Cheat: reveal operator</string>
    <string name="dialog_tip_cheat_reveal_operator_text">You have revealed the operator of a cage. Revealing the operator of a cage is not needed to solve the puzzle as each puzzle has one unique solution which can be found without using cheats.\nEach time you will use this cheat, the elapsed time will be increased by %1$s.</string>
    <string name="dialog_tip_cheat_reveal_solution_title">Cheat: reveal solution</string>
    <string name="dialog_tip_cheat_reveal_solution_text">You have revealed the solution of the puzzle. When you use this cheat, the elapsed time will be increased by %1$s.</string>
    <string name="dialog_tip_statistics_title">Statistics</string>
    <string name="dialog_tip_statistics_text">For each game you play, some statistics are collected. You can use the statistics just to view your historic results and you can use the statistics to improve your solving techniques.\n\nYou can view the statistics from the navigation menu. The navigation menu can be opened by tapping the MathDoku icon.</string>
    <string name="dialog_tip_duplicate_value_title">Duplicate value</string>
    <string name="dialog_tip_duplicate_value_text">You have entered a value which is already used in this column or this row. Each value should be used exactly once in each row and once in each column.</string>
    <string name="dialog_tip_bad_cage_math_title">Bad cage math</string>
    <string name="main_ui_solved_messsage">Solved!</string>
</resources>