<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_reveal_cell"
        android:title="@string/action_reveal_cell"/>
    <item
        android:id="@+id/action_reveal_operator"
        android:title="@string/action_reveal_operator"/>
    <item
        android:id="@+id/action_show_solution"
        android:title="@string/action_show_solution"/>
    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/content_new"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_game"/>
    <item
        android:id="@+id/action_fill_possibles"
        android:orderInCategory="22"
        android:showAsAction="never"
        android:title="@string/action_fill_possibles"/>
    <item
        android:id="@+id/action_fill_digitcalc"
        android:orderInCategory="25"
        android:showAsAction="never"
        android:title="@string/action_fill_digitcalc"/>
    <item
        android:id="@+id/action_clear_grid"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/action_clear_grid"/>
    <item
        android:id="@+id/action_puzzle_settings"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_puzzle_help"
        android:icon="@drawable/help"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_puzzle_picturenality"
        android:orderInCategory="60"
        android:showAsAction="never"
        android:title="@string/action_picturenality"/>
    
</menu>