<!-- Background of the top layout has been set to black to solve an issue with -->
<!-- subtle color differences between the relative and the linear layouts. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/puzzleGrid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp" >

        <!-- The margins of the next layout will be programmatically changed in such a way that the -->
        <!-- inner area (i.e. everything except margins/padding) of the layout has the same width as -->
        <!-- visible part of the grid player. -->
        <!-- The layout will only be filled with the timer. But note that we put another layout on -->
        <!-- top of this layout for displaying the input mode image and text. -->

        <com.klokisoft.mathdokuext.grid.ui.GridPlayerView
            android:id="@+id/grid_player_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/solvedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_ui_solved_messsage"
            android:textSize="@dimen/text_size_giant"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TableLayout
            android:id="@+id/digitButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TableRow android:layout_weight="1" >

                <Button
                    android:id="@+id/digit1"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button1"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit2"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button2"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit3"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button3"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_weight="1" >

                <Button
                    android:id="@+id/digit4"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button4"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit5"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button5"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit6"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button6"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_weight="1" >

                <Button
                    android:id="@+id/digit7"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button7"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit8"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button8"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/digit9"
                    style="@style/btnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:text="@string/main_ui_button9"
                    android:textStyle="bold" />
            </TableRow>

            <!-- <TableRow> -->


            <!-- <Button -->
            <!-- android:id="@+id/digitC" -->
            <!-- android:layout_margin="5dp" -->
            <!-- android:layout_weight="1" -->
            <!-- android:text="@string/main_ui_buttonC" -->
            <!-- android:textSize="@dimen/controls_text_size_default" -->
            <!-- android:textStyle="bold" -->
            <!-- tools:ignore="ButtonStyle" /> -->
            <!-- </TableRow> -->
        </TableLayout>

        <RelativeLayout
            android:id="@+id/clearUndo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/three_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/checkButton"
                    style="@style/btnImgStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:lines="1"
                    android:src="@drawable/icn_check"
                    tools:ignore="ContentDescription" />
                
            <LinearLayout
                android:id="@+id/two_buttons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/tiny_margin"
                android:baselineAligned="false"
                android:orientation="horizontal" >
                
                <ImageButton
                    android:id="@+id/undoButton"
                    style="@style/btnImgStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:src="@drawable/icn_backspace"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/clearButton"
                    style="@style/btnImgStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:src="@drawable/icn_cancel"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
                
                <Button
                    android:id="@+id/kkcButton"
                    style="@style/btnStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_margin="@dimen/tiny_margin"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:lines="1"
                    android:text="@string/main_ui_kkc" />

            </LinearLayout>
                <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="@+id/three_buttons"
                android:lines="1"
                android:text="00:00"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/input_mode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/input_mode_normal_light"
                    tools:ignore="ContentDescription" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>